Move directory one layer up to proper position

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "T-Connect",
-    "slug": "t-connect",
+    "slug": "monica",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
