--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "jszip": "^3.2.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-gl-model-view": "^1.4.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.10.1",
+    "react-navigation": "^3.9.1",
     "text-encoding": "^0.7.0",
     "three": "^0.104.0"
   },
